--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ chardet==3.0.4
 Django==3.0.3
 django-filter==2.2.0
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
 idna==2.8
 mysqlclient==1.4.6
+PyJWT==1.7.1
+python-decouple==3.3
 pytz==2019.3
 requests==2.22.0
 sqlparse==0.3.0
